atk-swatch + atk-table cell

--- a/framework/less/components.less
+++ b/framework/less/components.less
@@ -759,7 +759,7 @@ ul[class*=atk-menu] {
             .colorCheck(@@color);
             .backgroundColorCheck(@@color);
         }
-        &[class*='atk-button'], &.atk-label, .atk-table td&, .atk-table th&, >.atk-popover-arrow:before { 
+        &[class*='atk-button'], &.atk-label, .atk-table td&, .atk-table th&, .atk-table.atk-table-zebra tr&>td, .atk-table.atk-table-zebra tbody>tr>td&, >.atk-popover-arrow:before { 
             .colorCheck(@@color);
             background: @@color;
             border-color: @@color;
