--- a/framework/less/widgets.less
+++ b/framework/less/widgets.less
@@ -95,8 +95,7 @@
         }
     }
     &.atk-table-zebra {
-        tbody tr:nth-child(odd) td:not([class*='atk-swatch']),
-        tbody tr:nth-child(odd):not([class*='atk-swatch']) td {
+        tbody tr:nth-child(odd) td:not([class*='atk-swatch']) {
             background: lighten(@borderStatic, 9%);
         }
     }
