--- a/playground/css/theme-example-login.css
+++ b/playground/css/theme-example-login.css
@@ -5348,8 +5348,7 @@ a:focus {
   border-top-left-radius: 0;
   border-top-right-radius: 0;
 }
-.atk-table.atk-table-zebra tbody tr:nth-child(odd) td:not([class*='atk-swatch']),
-.atk-table.atk-table-zebra tbody tr:nth-child(odd):not([class*='atk-swatch']) td {
+.atk-table.atk-table-zebra tbody tr:nth-child(odd) td:not([class*='atk-swatch']) {
   background: #f8f8f8;
 }
 .atk-table.atk-table-outline > table {
@@ -6467,6 +6466,8 @@ a.atk-swatch-white:not(.atk-text-inherit):hover,
 .atk-swatch-white:not(.atk-text-inherit).atk-label,
 .atk-table td.atk-swatch-white:not(.atk-text-inherit),
 .atk-table th.atk-swatch-white:not(.atk-text-inherit),
+.atk-table.atk-table-zebra tr.atk-swatch-white:not(.atk-text-inherit) > td,
+.atk-table.atk-table-zebra tbody > tr > td.atk-swatch-white:not(.atk-text-inherit),
 .atk-swatch-white:not(.atk-text-inherit) > .atk-popover-arrow:before {
   color: #000000;
   background: #ffffff;
@@ -6536,6 +6537,8 @@ a.atk-swatch-black:not(.atk-text-inherit):hover,
 .atk-swatch-black:not(.atk-text-inherit).atk-label,
 .atk-table td.atk-swatch-black:not(.atk-text-inherit),
 .atk-table th.atk-swatch-black:not(.atk-text-inherit),
+.atk-table.atk-table-zebra tr.atk-swatch-black:not(.atk-text-inherit) > td,
+.atk-table.atk-table-zebra tbody > tr > td.atk-swatch-black:not(.atk-text-inherit),
 .atk-swatch-black:not(.atk-text-inherit) > .atk-popover-arrow:before {
   color: white;
   background: #000000;
@@ -6605,6 +6608,8 @@ a.atk-swatch-gray:not(.atk-text-inherit):hover,
 .atk-swatch-gray:not(.atk-text-inherit).atk-label,
 .atk-table td.atk-swatch-gray:not(.atk-text-inherit),
 .atk-table th.atk-swatch-gray:not(.atk-text-inherit),
+.atk-table.atk-table-zebra tr.atk-swatch-gray:not(.atk-text-inherit) > td,
+.atk-table.atk-table-zebra tbody > tr > td.atk-swatch-gray:not(.atk-text-inherit),
 .atk-swatch-gray:not(.atk-text-inherit) > .atk-popover-arrow:before {
   color: #000000;
   background: #f5f6f7;
@@ -6674,6 +6679,8 @@ a.atk-swatch-ink:not(.atk-text-inherit):hover,
 .atk-swatch-ink:not(.atk-text-inherit).atk-label,
 .atk-table td.atk-swatch-ink:not(.atk-text-inherit),
 .atk-table th.atk-swatch-ink:not(.atk-text-inherit),
+.atk-table.atk-table-zebra tr.atk-swatch-ink:not(.atk-text-inherit) > td,
+.atk-table.atk-table-zebra tbody > tr > td.atk-swatch-ink:not(.atk-text-inherit),
 .atk-swatch-ink:not(.atk-text-inherit) > .atk-popover-arrow:before {
   color: white;
   background: #1c2933;
@@ -6743,6 +6750,8 @@ a.atk-swatch-yellow:not(.atk-text-inherit):hover,
 .atk-swatch-yellow:not(.atk-text-inherit).atk-label,
 .atk-table td.atk-swatch-yellow:not(.atk-text-inherit),
 .atk-table th.atk-swatch-yellow:not(.atk-text-inherit),
+.atk-table.atk-table-zebra tr.atk-swatch-yellow:not(.atk-text-inherit) > td,
+.atk-table.atk-table-zebra tbody > tr > td.atk-swatch-yellow:not(.atk-text-inherit),
 .atk-swatch-yellow:not(.atk-text-inherit) > .atk-popover-arrow:before {
   color: #000000;
   background: #ffcc00;
@@ -6812,6 +6821,8 @@ a.atk-swatch-red:not(.atk-text-inherit):hover,
 .atk-swatch-red:not(.atk-text-inherit).atk-label,
 .atk-table td.atk-swatch-red:not(.atk-text-inherit),
 .atk-table th.atk-swatch-red:not(.atk-text-inherit),
+.atk-table.atk-table-zebra tr.atk-swatch-red:not(.atk-text-inherit) > td,
+.atk-table.atk-table-zebra tbody > tr > td.atk-swatch-red:not(.atk-text-inherit),
 .atk-swatch-red:not(.atk-text-inherit) > .atk-popover-arrow:before {
   color: white;
   background: #f9451f;
@@ -6881,6 +6892,8 @@ a.atk-swatch-green:not(.atk-text-inherit):hover,
 .atk-swatch-green:not(.atk-text-inherit).atk-label,
 .atk-table td.atk-swatch-green:not(.atk-text-inherit),
 .atk-table th.atk-swatch-green:not(.atk-text-inherit),
+.atk-table.atk-table-zebra tr.atk-swatch-green:not(.atk-text-inherit) > td,
+.atk-table.atk-table-zebra tbody > tr > td.atk-swatch-green:not(.atk-text-inherit),
 .atk-swatch-green:not(.atk-text-inherit) > .atk-popover-arrow:before {
   color: white;
   background: #00cc66;
@@ -6950,6 +6963,8 @@ a.atk-swatch-blue:not(.atk-text-inherit):hover,
 .atk-swatch-blue:not(.atk-text-inherit).atk-label,
 .atk-table td.atk-swatch-blue:not(.atk-text-inherit),
 .atk-table th.atk-swatch-blue:not(.atk-text-inherit),
+.atk-table.atk-table-zebra tr.atk-swatch-blue:not(.atk-text-inherit) > td,
+.atk-table.atk-table-zebra tbody > tr > td.atk-swatch-blue:not(.atk-text-inherit),
 .atk-swatch-blue:not(.atk-text-inherit) > .atk-popover-arrow:before {
   color: white;
   background: #0095ff;
@@ -7088,6 +7103,8 @@ a.atk-swatch-white:not(.atk-text-inherit):hover,
 .atk-swatch-white:not(.atk-text-inherit).atk-label,
 .atk-table td.atk-swatch-white:not(.atk-text-inherit),
 .atk-table th.atk-swatch-white:not(.atk-text-inherit),
+.atk-table.atk-table-zebra tr.atk-swatch-white:not(.atk-text-inherit) > td,
+.atk-table.atk-table-zebra tbody > tr > td.atk-swatch-white:not(.atk-text-inherit),
 .atk-swatch-white:not(.atk-text-inherit) > .atk-popover-arrow:before {
   color: #000000;
   background: #ffffff;
@@ -7157,6 +7174,8 @@ a.atk-swatch-gray:not(.atk-text-inherit):hover,
 .atk-swatch-gray:not(.atk-text-inherit).atk-label,
 .atk-table td.atk-swatch-gray:not(.atk-text-inherit),
 .atk-table th.atk-swatch-gray:not(.atk-text-inherit),
+.atk-table.atk-table-zebra tr.atk-swatch-gray:not(.atk-text-inherit) > td,
+.atk-table.atk-table-zebra tbody > tr > td.atk-swatch-gray:not(.atk-text-inherit),
 .atk-swatch-gray:not(.atk-text-inherit) > .atk-popover-arrow:before {
   color: #000000;
   background: #f5f6f7;
@@ -7226,6 +7245,8 @@ a.atk-swatch-ink:not(.atk-text-inherit):hover,
 .atk-swatch-ink:not(.atk-text-inherit).atk-label,
 .atk-table td.atk-swatch-ink:not(.atk-text-inherit),
 .atk-table th.atk-swatch-ink:not(.atk-text-inherit),
+.atk-table.atk-table-zebra tr.atk-swatch-ink:not(.atk-text-inherit) > td,
+.atk-table.atk-table-zebra tbody > tr > td.atk-swatch-ink:not(.atk-text-inherit),
 .atk-swatch-ink:not(.atk-text-inherit) > .atk-popover-arrow:before {
   color: white;
   background: #1c2933;
@@ -7295,6 +7316,8 @@ a.atk-swatch-yellow:not(.atk-text-inherit):hover,
 .atk-swatch-yellow:not(.atk-text-inherit).atk-label,
 .atk-table td.atk-swatch-yellow:not(.atk-text-inherit),
 .atk-table th.atk-swatch-yellow:not(.atk-text-inherit),
+.atk-table.atk-table-zebra tr.atk-swatch-yellow:not(.atk-text-inherit) > td,
+.atk-table.atk-table-zebra tbody > tr > td.atk-swatch-yellow:not(.atk-text-inherit),
 .atk-swatch-yellow:not(.atk-text-inherit) > .atk-popover-arrow:before {
   color: #000000;
   background: #ffcc00;
@@ -7364,6 +7387,8 @@ a.atk-swatch-red:not(.atk-text-inherit):hover,
 .atk-swatch-red:not(.atk-text-inherit).atk-label,
 .atk-table td.atk-swatch-red:not(.atk-text-inherit),
 .atk-table th.atk-swatch-red:not(.atk-text-inherit),
+.atk-table.atk-table-zebra tr.atk-swatch-red:not(.atk-text-inherit) > td,
+.atk-table.atk-table-zebra tbody > tr > td.atk-swatch-red:not(.atk-text-inherit),
 .atk-swatch-red:not(.atk-text-inherit) > .atk-popover-arrow:before {
   color: white;
   background: #f9451f;
@@ -7433,6 +7458,8 @@ a.atk-swatch-green:not(.atk-text-inherit):hover,
 .atk-swatch-green:not(.atk-text-inherit).atk-label,
 .atk-table td.atk-swatch-green:not(.atk-text-inherit),
 .atk-table th.atk-swatch-green:not(.atk-text-inherit),
+.atk-table.atk-table-zebra tr.atk-swatch-green:not(.atk-text-inherit) > td,
+.atk-table.atk-table-zebra tbody > tr > td.atk-swatch-green:not(.atk-text-inherit),
 .atk-swatch-green:not(.atk-text-inherit) > .atk-popover-arrow:before {
   color: white;
   background: #00cc66;
@@ -7502,6 +7529,8 @@ a.atk-swatch-blue:not(.atk-text-inherit):hover,
 .atk-swatch-blue:not(.atk-text-inherit).atk-label,
 .atk-table td.atk-swatch-blue:not(.atk-text-inherit),
 .atk-table th.atk-swatch-blue:not(.atk-text-inherit),
+.atk-table.atk-table-zebra tr.atk-swatch-blue:not(.atk-text-inherit) > td,
+.atk-table.atk-table-zebra tbody > tr > td.atk-swatch-blue:not(.atk-text-inherit),
 .atk-swatch-blue:not(.atk-text-inherit) > .atk-popover-arrow:before {
   color: white;
   background: #0095ff;
