--- a/playground/layouts/fluid.jade
+++ b/playground/layouts/fluid.jade
@@ -29,7 +29,7 @@ html(class='no-js')
               h2 Left Sidebar
               p
                 | Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eget justo eget nisl mattis posuere eu ut neque. Aenean congue mollis est, ac viverra mauris bibendum et. Donec facilisis quam id semper accumsan. Curabitur nibh dui, lobortis nec elit et, sagittis sollicitudin magna.
-          .atk-layout-column.atk-layout-expand
+          .atk-layout-column.atk-layout-expand(style="width: 100%")
             .atk-wrapper.atk-padding-large
               h2 Content Area
               p
