--- a/playground/css/theme-fluid.css
+++ b/playground/css/theme-fluid.css
@@ -3,7 +3,7 @@
  *  http://www4.agiletoolkit.org/css
  */
 /**
- * Agile Toolkit CSS Framework (c) 2013-2014 v0.912
+ * Agile Toolkit CSS Framework (c) 2013-2014 v0.913
  *  http://www4.agiletoolkit.org/css
  */
 @font-face {
@@ -5982,7 +5982,7 @@ ul[class*=atk-menu].atk-menu-vertical > li *[class*=atk-menu]:not(.atk-menu-sepa
 }
 .atk-jackscrew,
 .atk-expand {
-  width: 100%;
+  width: 100% !important;
 }
 .atk-clear-fix {
   *zoom: 1;
