--- a/playground/css/theme.css
+++ b/playground/css/theme.css
@@ -4,7 +4,7 @@
  *  Theme: Playground (Based on default)
  */
 /**
- * Agile Toolkit CSS Framework (c) 2013-2014 v0.912
+ * Agile Toolkit CSS Framework (c) 2013-2014 v0.913
  *  http://www4.agiletoolkit.org/css
  */
 @font-face {
@@ -5983,7 +5983,7 @@ ul[class*=atk-menu].atk-menu-vertical > li *[class*=atk-menu]:not(.atk-menu-sepa
 }
 .atk-jackscrew,
 .atk-expand {
-  width: 100%;
+  width: 100% !important;
 }
 .atk-clear-fix {
   *zoom: 1;
