--- a/framework/less/misc.less
+++ b/framework/less/misc.less
@@ -29,7 +29,7 @@ body {
   .background-cover(inherit);
 }
 
-*[class*=atk-box], .ui-tabs *[class*=atk-box].ui-tabs-panel.ui-widget-content, *[class*=atk-swatch] hr {
+*[class*=atk-box], .ui-tabs *[class*=atk-box].ui-tabs-panel.ui-widget-content, *[class*=atk-swatch] hr, hr {
   &.atk-border-static {
     border-color: @borderStatic;
   }
