--- a/framework/less/responsive.less
+++ b/framework/less/responsive.less
@@ -94,7 +94,8 @@
       .atk-row {
         margin-left: -@g;
         *[class*=atk-col] {
-          border:0px solid rgba(0,0,0,0);
+          border-left:0px solid rgba(0,0,0,0);
+          border-right:0px solid rgba(0,0,0,0);
           border-left-width: @g;
         }
       }
