--- a/framework/less/typography.less
+++ b/framework/less/typography.less
@@ -244,6 +244,9 @@ hr {
     &.atk-hr-large {
         margin: round(@margin*2,2) 0;
     }
+    &.atk-hr-xlarge {
+        margin: round(@margin*3,2) 0;
+    }
     &.atk-hr-dotted {
         border-top-style: dotted;
     }
