--- a/framework/less/mixins.less
+++ b/framework/less/mixins.less
@@ -136,21 +136,25 @@
 
 // Single Corner Border Radius
 .border-top-left-radius(@radius) {
+  .border-radius(0);
   -webkit-border-top-left-radius: @radius;
      -moz-border-top-left-radius: @radius;
           border-top-left-radius: @radius;
 }
 .border-top-right-radius(@radius) {
+  .border-radius(0);
   -webkit-border-top-right-radius: @radius;
      -moz-border-top-right-radius: @radius;
           border-top-right-radius: @radius;
 }
 .border-bottom-left-radius(@radius) {
+  .border-radius(0);
   -webkit-border-bottom-left-radius: @radius;
      -moz-border-bottom-left-radius: @radius;
           border-bottom-left-radius: @radius;
 }
 .border-bottom-right-radius(@radius) {
+  .border-radius(0);
   -webkit-border-bottom-right-radius: @radius;
      -moz-border-bottom-right-radius: @radius;
           border-bottom-right-radius: @radius;
@@ -158,18 +162,22 @@
 
 // Single Side Border Radius
 .border-top-radius(@radius) {
+  .border-radius(0);
     .border-top-left-radius(@radius);
     .border-top-right-radius(@radius);
 }
 .border-bottom-radius(@radius) {
+  .border-radius(0);
     .border-bottom-left-radius(@radius);
     .border-bottom-right-radius(@radius);
 }
 .border-left-radius(@radius) {
+  .border-radius(0);
     .border-top-left-radius(@radius);
     .border-bottom-left-radius(@radius);
 }
 .border-right-radius(@radius) {
+  .border-radius(0);
     .border-top-right-radius(@radius);
     .border-bottom-right-radius(@radius);
 }
